# cmake_training

./: README.md
cmake_training/: CMakeLists.txt
cmake_training/app/: CMakeLists.txt  Main.cpp
cmake_training/cmake/: FunctionVsMacro.cmake
cmake_training/extLib/: CMakeLists.txt
cmake_training/extLib/breeds/: Breed.cpp  Breed.h  CMakeLists.txt
cmake_training/extLib/others/: CMakeLists.txt
cmake_training/lib/: CMakeLists.txt
cmake_training/lib/animals/: CMakeLists.txt  Dog.cpp  Dog.h
